--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -4,3 +4,5 @@ REACT_APP_FIREBASE_PROJECT_ID=your_project_id
 REACT_APP_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 REACT_APP_FIREBASE_APP_ID=your_firebase_app_id
+
+REACT_APP_API_URL=your_app_api_url
