--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "firebase": "^11.7.3",
     "react": "^19.1.0",
