--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,19 @@
 {
   "hosting": {
+    "target": "umrah-planner-a2ec0",
     "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
+      }
+    ],
+    "redirects": [
+      {
+        "source": "https://manasikplanner.com/**",
+        "destination": "https://www.manasikplanner.com",
+        "type": 301
       }
     ]
   }
